Text fix + dark mode

--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,8 @@
 body {
-	margin-left: 20%;
-	margin-right: 20%;
-	margin-bottom: 10%;
+	margin: 5% 20%;	
 	text-align: justify;
 	position: relative;
-	top: 30px;
-	scroll-behavior: smooth;
+	background-color: #282c34;
 }
 
 h1 {
@@ -32,6 +29,7 @@ p {
 pre {
 	font-family: 'Hack', monospace;
 	background-color: #282c34;
+	padding: 1em;
 }
 
 .navbar {
@@ -187,17 +185,25 @@ a.button:hover {
 	color: white !important;
 }
 
-@media screen and (max-width:719px) {
-	.navbar a {
-		padding: 10px 0px;
-		width: 100%;
-	}
+.card {
+	position: relative;
+	padding: 1em;
+	background-color: rgba(255, 255, 255, 0.8) !important;
+}
 
+@media screen and (max-width: 1200px) {
 	.footer a {
 		padding: 10px 0px;
 		width: 100%;
 	}
+}
 
+@media screen and (max-width: 719px){
+	.navbar a {
+		padding: 10px 0px;
+		width: 100%;
+	}
+	
 	iframe {
 		width: 360px;
 		height: 202px;
